--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "types": [ "vite/client" ],
   "compilerOptions": {
     "target": "es2015",
     "module": "esnext",
@@ -20,9 +21,9 @@
     "paths": {
       "@": ["src"],
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["vite/client"]
   },
   "include": ["**/*.ts", "**/*.tsx","**/*.vue",],
-
-  "compileOnSave": false
+  "compileOnSave": true
 }
