--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.1.3",
     "dayjs": "^1.10.8",
     "echarts": "5.1.2",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^1.7.0",
     "tdesign-icons-vue": "^0.1.6",
@@ -66,7 +67,6 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
       "prettier --write",
